k8s/datadog-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: datadog-agent
  namespace: officenafiap
  labels:
    app: datadog-agent
spec:
  selector:
    matchLabels:
      app: datadog-agent
  template:
    metadata:
      labels:
        app: datadog-agent
    spec:
      serviceAccountName: datadog-agent
      containers:
        - name: datadog-agent
          image: public.ecr.aws/datadog/agent:7.52.0
          ports:
            - containerPort: 8126
              hostPort: 8126
              name: traceport
              protocol: TCP
            - containerPort: 8125
              hostPort: 8125
              name: dogstatsdport
              protocol: UDP
          volumeMounts:
            - name: containerdsock
              mountPath: /var/run/containerd/containerd.sock
              readOnly: true
            - name: procdir
              mountPath: /host/proc
              readOnly: true
            - name: cgroups
              mountPath: /host/sys/fs/cgroup
              readOnly: true
            - name: pointerdir
              mountPath: /opt/datadog-agent/run
            - name: logpodpath
              mountPath: /var/log/pods
              readOnly: true
            - name: logcontainerpath
              mountPath: /var/log/containers
              readOnly: true
          securityContext:
            runAsUser: 0
      volumes:
        - name: containerdsock
          hostPath:
            path: /var/run/containerd/containerd.sock
        - name: procdir
          hostPath:
            path: /proc
        - name: cgroups
          hostPath:
            path: /sys/fs/cgroup
        - name: pointerdir
          hostPath:
            path: /opt/datadog-agent/run
            type: DirectoryOrCreate
        - name: logpodpath
          hostPath:
            path: /var/log/pods
        - name: logcontainerpath
          hostPath:
            path: /var/log/containers
